SASS: Fix weird spacing between characters on Arabic buttons
Cursive languages like Arabic have connected letters. The styling
on our buttons made the Arabic buttons look weird.

This commit uses the lang selector to show the letter with no
spacing when Arabic is used, else if Arabic is NOT used, the
existing spacing will be used.

--- a/securedrop/sass/_base.sass
+++ b/securedrop/sass/_base.sass
@@ -69,7 +69,10 @@
 
   .sd-button
     font-weight: normal
-    letter-spacing: 0.15em
+    &:not([lang=ar])
+      letter-spacing: 0.15em
+    &:lang(ar)
+      letter-spacing: 0em
 
   .select
     border: 1px #C4C2C2 solid
